Implemented User Resource
