# src/main/java/juicenetcafe/userservice/entities/User.java
@@ -1,0 +1,46 @@
+package juicenetcafe.userservice.entities;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.Id;
+import javax.validation.constraints.Email;
+import javax.validation.constraints.NotEmpty;
+import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Size;
+
+import static javax.persistence.GenerationType.AUTO;
+
+@Entity
+@Data
+@NoArgsConstructor
+@AllArgsConstructor
+public class User {
+    @Id
+    @GeneratedValue(strategy = AUTO)
+    private Long id;
+
+    @NotNull
+    @NotEmpty
+    @Size(max = 255)
+    private String name;
+
+    @NotNull
+    @NotEmpty
+    @Size(max = 255)
+    private String username;
+
+    @NotNull
+    @NotEmpty
+    @Email
+    @Size(max = 255)
+    private String email;
+
+    @NotNull
+    @NotEmpty
+    @Size(min = 8)
+    private String password;
+}
